@@ -48,8 +48,14 @@ import warnings
 import textwrap
 from types import MethodType
 
-import Bio.Seq
-import Bio.SeqRecord
+try:
+    import Bio.Seq
+    import Bio.SeqRecord
+except ImportError:
+    HAS_BIOPYTHON = False
+else:
+    HAS_BIOPYTHON = True
+
 import numpy as np
 
 from ..lib.util import (cached, convert_aa_code, iterable, warn_if_not_unique,
@@ -2810,9 +2816,20 @@ class Resnames(ResidueStringAttr):
 
         :exc:`TypeError` if an unknown *format* is selected.
 
+        :exc:`ImportError` is the Biopython package is not available.
+
 
         .. versionadded:: 0.9.0
+        .. versionchanged:: 2.7.0
+           Biopython is now an optional dependency
         """
+        if not HAS_BIOPYTHON:
+            errmsg = ("The `sequence_alignment` method requires an "
+                      "installation of `Biopython`. Please install "
+                      "`Biopython` to use this method: "
+                      "https://biopython.org/wiki/Download")
+            raise ImportError(errmsg)
+
         formats = ('string', 'Seq', 'SeqRecord')
 
         format = kwargs.pop("format", "SeqRecord")
