@@ -36,7 +36,6 @@ maintainers = [
 requires-python = ">=3.9"
 dependencies = [
     'numpy>=1.22.3',
-    'biopython>=1.80',
     'GridDataFormats>=0.4.0',
     'mmtf-python>=1.0.0',
     'joblib>=0.12',
@@ -85,6 +84,7 @@ extra_formats = [
     "rdkit>=2020.03.1",
 ]
 analysis = [
+    "biopython>=1.80",
     "seaborn",
     "scikit-learn",
     "tidynamics>=1.0.0",
